--- a/MediaStreamingApplication/src/main/resources/application.properties
+++ b/MediaStreamingApplication/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.servlet.multipart.max-file-size=5GB
 spring.servlet.multipart.max-request-size=5GB
 
 
-file.storage.path=E:\\Volumes
+file.storage.path=E:\\jayaraman\\Volumes
 server.base.url=http://localhost:8080
-
+   
 
 
