--- a/mediastream/package.json
+++ b/mediastream/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "axios": "^1.8.4",
     "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
+    "react": "^18.3.1",    
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "tailwind-scrollbar-hide": "^2.0.0"
